# Mathyw

./: .gitmodules  CMakeLists.txt  CMakeSettings.json  LICENSE.txt  README.md
example/: CMakeLists.txt  create_window.cpp
include/Mathyw/: all.hpp  clock.hpp  color.hpp  core.hpp  developer_menu.hpp  event.hpp  font.hpp  inputcode.hpp  matrix.hpp  monitor.hpp  numeric.hpp  opengl.hpp  shader.hpp  texture.hpp  transformation.hpp  value_tracker.hpp  vector.hpp  vertex_array.hpp  window.hpp
src/: clock.cpp  developer_menu.cpp  font.cpp  monitor.cpp  opengl.cpp  shader.cpp  texture.cpp  transformation.cpp  value_tracker.cpp  vertex_array.cpp  window.cpp
test/: CMakeLists.txt  main.cpp
